# v-synth

./: .gitignore  LICENSE  README.md  v-synth.ino
server/: Cargo.toml
server/src/: main.rs
